--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.5.6/css/pico.min.css" type="text/css">
+  <title>Frenchmity's Store</title>
+</head>
+
+<body>
+  <center>
+    <h1>Frenchmity's Store</h1>
+    <p>To install a plugin, click on the "Install Plugin" button.</p>
+    <hr />
+    <article>
+      <h2>BadgeDB</h2>
+      <p>v<ver>0.0.0</ver>
+      </p>
+      <p>Badge yourself up</p>
+      <p>BadgeDB allows you to have you very own customizable badge that anyone with the plugin can see!</p>
+      <button>
+        Install Plugin
+      </button>
+    </article>
+    <hr />
+    <p>Some parts taken from <a href="https://github.com/enmity-mod/store">Enmity Mod / Store</a>, rest made by me.</p>
+  </center>
+  <script src="script.js"></script>
+</body>
+
+</html>
