--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
       <p>Badge yourself up</p>
       <p>BadgeDB allows you to have you very own customizable badge that anyone with the plugin can see!</p>
-      <button>
+      <button onclick="location.href=`com.hammerandchisel.discord://enmity?id=-1&command=install-plugin&params=https://badgedb-plugin.pages.dev/dist/BadgeDB.js`">
         Install Plugin
       </button>
     </article>
